# angr-management

./: .adb  .git-blame-ignore-revs  .gitignore  .gitmodules  .pre-commit-config.yaml  .pylintrc  .readthedocs.yaml  Dockerfile  LICENSE  README.md  angr-management.desktop  angr-management.metainfo.xml  angr-management.nsi  angr-management.spec  bundle.py  install-unicorn-macos.sh  pyproject.toml  requirements.txt  run-docker-macos.sh  run.py  setup.cfg  setup.py  start.py
.azure-pipelines/: build.bat  build.sh  bundle.py  get_oldest_nightly.py  master.yml  nightly-build.yml  nightly.yml  release.py
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  feature-request.yml  question.yml
.github/tests/: test_install_windows.py
.github/workflows/: ci.yml  coverage.yml  macos.yml  nightly-build.sh  nightly-build.yml  nightly-ci.yml  pyinstaller-build.yml  release.yml  windows.yml
angrmanagement/: __init__.py  __main__.py  app.py  consts.py  errors.py  explorer.py  py.typed  serializer.py
angrmanagement/config/: __init__.py  color_schemes.py  config_entry.py  config_manager.py
angrmanagement/consts/: __init__.py
angrmanagement/daemon/: __init__.py  client.py  server.py  url_handler.py
angrmanagement/data/: analysis_options.py  breakpoint.py  function_graph.py  highlight_region.py  indirect_jump.py  instance.py  jobs.py  library_docs.py  log.py  multi_trace.py  object_container.py  registry.py  signatures.py  states.py  sync_ctrl.py  tagged_interval_map.py  trace.py  trace_statistics.py  workspace.py
angrmanagement/data/jobs/: __init__.py  bindiff_matching.py  calling_convention_recovery.py  cfg_generation.py  code_tagging.py  ddg_generation.py  decompile_function.py  deobfuscation.py  dependency_analysis.py  flirt_signature_recognition.py  fuzzer.py  insights.py  job.py  llm_preload.py  llm_refine.py  loading.py  overview.py  prototype_finding.py  rust_symbol_recovery.py  rust_typedb_loader.py  simgr_explore.py  simgr_step.py  typedb_loader.py  variable_recovery.py  vfg_generation.py
angrmanagement/logic/: __init__.py  analysis_manager.py  jobmanager.py  singleton.py  stall_watchdog.py  threads.py  url_scheme.py
angrmanagement/logic/commands/: __init__.py  command.py  command_manager.py
angrmanagement/logic/debugger/: __init__.py  bintrace.py  debugger.py  simgr.py
angrmanagement/logic/disassembly/: __init__.py  info_dock.py  jump_history.py
angrmanagement/plugins/: __init__.py  base_plugin.py  load.py  plugin_description.py  plugin_manager.py  sample_plugin.py  test_plugin.py
angrmanagement/qt/: qt_factories.py  qt_flow_graph.py  qt_function_table_control.py  qt_graph.py  qt_list_control.py  qt_rich_container.py  qt_rich_field.py  qt_rich_label.py  qt_table_control.py
angrmanagement/ui/: awesome_tooltip_event_filter.py  block.enaml  cfg.enaml  console.enaml  function_table.py  functions.enaml  graph.py  icons.py  jumpto.enaml  listcontrol.py  load_binary.enaml  main.enaml  main_window.py  notify.py  pathgroup.enaml  pathtree.enaml  person.enaml  plugin_manager.py  rename_label.enaml  state.enaml  table.py  tablecontrol.py  theme.py  toolbar_manager.py  view_manager.py  wkitem.enaml  workingbutton.enaml  workspace.py
angrmanagement/utils/: __init__.py  archive.py  block_objects.py  cache.py  cfg.py  daemon_thread.py  edge.py  env.py  func.py  graph.py  graph_layouter.py  io.py  layout.py  monkeypatch_stdio.py  namegen.py  subscriptions.py  track_system_theme.py  tree_graph_layouter.py
angrmanagement/widgets/: api.py  flowgraph.py  graph.py  rich_container.py  rich_field.py  rich_label.py  table.py
docs/: TODO.md  conf.py  index.rst  plugin_metadata_spec.md  plugin_spec.md  quickstart.rst  requirements.txt
docs/development/: TESTING_GUIDE.md  events.rst  index.rst  overview.rst  plugins.rst  pyinstaller.rst  testing.rst  ui.rst
packaging/appimage/: AppImageBuilder.yml  build.sh
packaging/docker/: Dockerfile  README.md  README.md.bak  run-docker.sh
packaging/pyinstaller/: angr-management.spec  bundle.py
scripts/: build-appimage.sh  get-version.py  sync-vendor-packages.sh
static/: index.html
static/css/: contextmenu.css  graph.css  main.css  memory.css  preload.css  upside-down-tabs.css
static/js/: .jslintrc  Communicator.js  View.js  app.js  comm.js  contextmenu.js  controllers.js  dagre.min.js  directives.js  explore.js  filters.js  services.js  states.js  surveyors.js  tile.js  tools.js  view.js  workspace.js
static/partials/: add_tab.html  address.html  addressname.html  asmstmt.html  ast_modal.html  bblock.html  cast.html  cexpr.html  cfg.html  connectproject.html  contextmenuendpoint.html  contextmenuitem.html  funcman.html  funcnode.html  funcpicker.html  functions.html  graph.html  index.html  irexpr.html  irreg.html  irregtooltip.html  irsb.html  irstmt.html  irtmp.html  loadfile.html  memory_cell.html  memory_grid.html  newproject.html  newsurveyor.html  path.html  path_event.html  paths.html  project.html  proxgraph.html  ref.html  splittest.html  state.html  state_files.html  state_memory.html  state_registers.html  (+5 more)
tests/: common.py  conftest.py  disabled_test_binsync_plugin.py  manual_human_activities.py  test_analyses.py  test_angrdb_reload_decompilation.py  test_binsync_plugin.py  test_cfg_recovery_ux.py  test_code_view.py  test_command_palette.py  test_data_dep_view.py  test_disassembly_view.py  test_goto_palette.py  test_hex_view.py  test_human_activities.py  test_main_window.py  test_palette.py  test_plugin_desciption_loading.py  test_proximity_view.py  test_qaddress_input.py  test_qdisasm_graph.py  test_qlinear_viewer.py  test_qproperty_editor.py  test_rename_functions.py  test_rename_variables.py  test_retype_function.py  test_retype_node_dialog.py  test_retype_variables.py  test_tagged_interval_map.py  test_type_editor.py  test_undefine_code_regions.py  test_undefine_redefine_code_regions.py  test_urlscheme.py  test_views_open.py  test_workflow.py  test_xref_dialog.py
tests/dialogs/: test_analysis_options.py  test_archive_loader.py  test_assemble_patch_dialog.py
tests/installation/: check_windows_install.py
(+387 files in other folders)
