[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 120
target-version = ['py310']
extend-exclude = "angrmanagement/vendor/"

[tool.ruff]
line-length = 120
target-version = 'py310'
exclude = ["angrmanagement/vendor/"]

[tool.ruff.lint]
select =  [
    "B",
    "C4",
    "E",
    "EXE",
    "F",
    "G",
    "I",
    "INT",
    "ISC",
    "PIE",
    "PLE",
    "RSE",
    "SIM",
    "T10",
    "TID",
    "TCH",
    "UP",
    "W",
    "YTT",
]

ignore = [
]

[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]


[tool.mypy]
packages = ["angrmanagement", "tests"]
exclude = [
    "angrmanagement/vendor/",
    "/build",
    "/dist",
]
follow_imports = "silent"
