[metadata]
name = angr-management
version = attr: angrmanagement.__version__
description = GUI for angr
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/angr/angr-management
license = BSD-2-Clause
license_files = LICENSE
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only

[options]
packages = find:
install_requires =
    PySide6>=6.4.0.1
    PySide6-QtAds
    QtAwesome
    QtPy~=2.3.0
    angr[angrDB]==9.2.35.dev0
    bidict
    getmac
    ipython
    pyqodeng>=0.0.6
    pyxdg
    qtconsole
    qtterm
    requests[socks]
    tomlkit
    pyobjc-framework-Cocoa;platform_system == "Darwin"
python_requires = >=3.8
include_package_data = True

[options.entry_points]
console_scripts =
    angr-management = angrmanagement.__main__:main

[options.extras_require]
bintrace =
    bintrace

[options.package_data]
angrmanagement =
    resources/fonts/*.ttf
    resources/images/*
    resources/themes/**/*
