[metadata]
name = angr-management
version = attr: angrmanagement.__version__
description = GUI for angr
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/angr/angr-management
license = BSD-2-Clause
license_files = LICENSE
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only

[options]
packages = find:
install_requires =
    PySide6>=6.4.2
    PySide6-QtAds
    QtAwesome
    QtPy~=2.3.0
    angr[angrDB]==9.2.83
    bidict
    ipython
    pyqodeng>=0.0.10
    qtconsole==5.4.1
    qtterm
    requests[socks]
    tomlkit
    pyobjc-framework-Cocoa;platform_system == "Darwin"
    thefuzz[speedup]
    binsync==3.22.0

python_requires = >=3.8
include_package_data = True

[options.entry_points]
console_scripts =
    angr-management = angrmanagement.__main__:main

[options.extras_require]
bintrace =
    bintrace
pyinstaller =
    pyinstaller==6.2.0
    pillow;platform_system == "Darwin"
    keystone-engine
    archr==9.2.83;platform_system == "Linux"

[options.package_data]
angrmanagement =
    resources/fonts/*.ttf
    resources/images/*
    resources/themes/**/*
