[metadata]
name = angr-management
version = attr: angrmanagement.__version__
description = GUI for angr
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/angr/angr-management
license = BSD-2-Clause
license_files = LICENSE
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only

[options]
packages = find:
install_requires =
    PySide6>=6.4.2,!=6.7.0
    PySide6-QtAds>=4.2.1
    QtAwesome
    QtPy
    angr[angrDB]==9.2.136.dev0
    bidict
    ipython
    pyqodeng>=0.0.10
    requests[socks]
    tomlkit
    pyobjc-framework-Cocoa;platform_system == "Darwin"
    thefuzz[speedup]
    binsync==5.2.0
    rpyc

    # requirements for vendorized qtconsole package
    traitlets!=5.2.1,!=5.2.2
    jupyter_core
    jupyter_client>=4.1
    pygments
    ipykernel>=4.1  # not a real dependency, but require the reference kernel
    qtpy>=2.4.0
    pyzmq>=26.1.0
    packaging

python_requires = >=3.10
include_package_data = True

[options.entry_points]
console_scripts =
    angr-management = angrmanagement.__main__:main

[options.extras_require]
binharness =
    binharness~=0.1.0
bintrace =
    bintrace
docs =
    furo
    myst-parser
    sphinx
    sphinx-autodoc-typehints
pyinstaller =
    pyinstaller==6.10
    pillow;platform_system == "Darwin"
    keystone-engine
    archr==9.2.136.dev0;platform_system == "Linux"
testing =
    pytest
    pytest-xdist

[options.package_data]
angrmanagement =
    plugins/**/plugin.toml
    resources/fonts/*.ttf
    resources/images/*
    resources/themes/**/*
